// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/FormItem should render correctly 1`] = `
<div
  class="formItem m row"
  data-role="formItem_name"
>
  <p
    breed="subtitle"
    class="label label base general m left semibold l_l"
    data-role="formItem_label_label"
  >
    label
  </p>
  <div
    class="wrapper size-l"
  >
    <input
      class="input default"
      data-role="formItem_control_name"
      name="name"
      type="text"
    />
  </div>
  <p
    class="labelRight base general s left"
    data-role="formItem_label_right_label_right"
  >
    labelRight
  </p>
  <p
    class="message base general s left"
    data-role="formItem_message_message"
  >
    message
  </p>
</div>
`;

exports[`uikit/FormItem should render with error correctly 1`] = `
<div
  class="formItem m danger"
  data-role="formItem_name"
>
  <div
    class="wrapper size-l"
  >
    <input
      class="input danger"
      data-role="formItem_control_name"
      name="name"
      type="text"
      value="name"
    />
  </div>
  <p
    class="message base general danger s left"
    data-role="formItem_message_error"
  >
    error
  </p>
</div>
`;

exports[`uikit/FormItem should render with isSuccess correctly 1`] = `
<div
  class="formItem m success"
  data-role="formItem_name"
>
  <div
    class="wrapper size-l"
  >
    <input
      class="input default"
      data-role="formItem_control_name"
      name="name"
      type="text"
    />
  </div>
</div>
`;

exports[`uikit/FormItem should render with success correctly 1`] = `
<div
  class="formItem m success"
  data-role="formItem_name"
>
  <div
    class="wrapper size-l"
  >
    <input
      class="input success"
      data-role="formItem_control_name"
      name="name"
      type="text"
    />
  </div>
  <p
    class="message base general success s left"
    data-role="formItem_message_success"
  >
    success
  </p>
</div>
`;
